# LatentInverseProblems

./: .gitignore  CLAUDE.md  README.md  experiment.py  ideas.md  program.md  pyproject.toml  report.md  requirements.txt  results.tsv  summary.yaml
.claude/: ralph-loop.local.md
archive/: experiment.py  results.tsv
archive/notebooks/: GaussianLATINO.ipynb
archive/results/: scoreboard.md
archive/scripts/: run_gaussian.py  run_nonlinear.py
archive/solvers/: latent_latino_sde.py  latent_lflow.py  latent_mmps.py  latent_split_gibbs.py  latino.py  lflow.py  map_laplace.py  metrics_original.py  mmps.py
lip/: __init__.py  metrics.py  problems.py  vae.py
lip/solvers/: __init__.py  dps.py  fps.py  latent_dps.py  latent_latino.py  latent_mmps.py  latino_sde.py  mala_sal.py  nsps.py  oracle_langevin.py  sal.py
notebooks/: GaussianLATINO.ipynb  TwoMoons.ipynb
papers/: achituve2025.md  askari2025.md  chung2023.md  ge2018_simtempering.md  gupta2024.md  index.md  janati2024_divideconquer.md  provable_gt_ld2024.md  rao2025.md  rozet2024.md  sabour2025_fmtt.md  spagnoletti2025.md  stsl2024.md  wu2024_pnpdm.md  wu2025_ald_convergence.md
results/: insights.md  log.md  scoreboard.md  summary.md
scripts/: plot_vae_quality.py  run_mnist_vae.py  run_nonlinear.py  train_vae.py
